paperless-ngx-k3s/ingress/paperless-ngx-ingress-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: paperless-ngx-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - paperless-ngx.example
    secretName: paperless-ngx-example-tls
  rules:
  - host: paperless-ngx.example
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: paperless-ngx-webserver
            port:
              number: 80
